<resources>
    <string name="app_name">Video App</string>
    <string name="title_home">Home</string>
    <string name="title_post">Post</string>
    <string name="title_videos">Videos</string>
    <string name="title_account">Account</string>
    <string name="str_email_hint">email</string>
    <string name="str_password_hint">Password</string>
    <string name="str_name">name</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_back_button">already have account? login</string>
    <string name="sign_up_go_button">Don\'t have an account?Sign Up</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_button">Logout</string>
    <string name="pic_button">Images</string>
    <string name="video_button">Videos</string>
    <string name="upload_button">Upload</string>
    <string name="str_choose_type">choose type of the content which is image or video</string>
    <string name="browse_file">browse and select the target file to upload</string>
    <string name="edit_button">Edit Account</string>
    <string name="edit_update_button">Update</string>
    <string name="update_cancel_button">Cancel</string>
    <string name="selected_image_view">shows selected images</string>
    <string name="video_tittle">Tittle</string>
    <string name="content_title">title</string>
    <string name="user_img_change">change image</string>

    <string-array name="list_item">
        <item>image</item>
        <item>video</item>
    </string-array>

</resources>