<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">


    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/teal_700"
            android:gravity="center_vertical"
            android:text="@string/str_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="@dimen/margin_eight"/>

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/teal_700"
            android:gravity="center_vertical"
            android:text="@string/str_email_hint"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="@dimen/margin_eight"/>

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/edit_button" />


    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="@string/logout_button" />



</RelativeLayout>