<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_email"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/str_name"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/margin_eight"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/signUpName"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/str_email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/margin_eight"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/signUpEmail"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/str_password_hint"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin_eight"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/signUpPassword"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:background="@color/black"
        android:ems="10"
        android:onClick="signUp"
        android:text="@string/sign_up_button"
        android:textColor="#757575"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:background="@color/black"
        android:ems="10"
        android:onClick="goSignIn"
        android:text="@string/sign_in_back_button"
        android:textColor="#757575"
        android:textSize="18sp" />




</RelativeLayout>