<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.PostFragment">




    <ImageView
        android:id="@+id/firebaseImg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="@dimen/margin_eight"
        android:contentDescription="@string/selected_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse_file_img" />

    <ImageButton
        android:id="@+id/browse_file_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_eight"
        android:background="@drawable/upload_btn"
        android:contentDescription="@string/browse_file"
        android:src="@drawable/ic_baseline_video_call_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/browse_file_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_eight"
        android:background="@drawable/upload_btn"
        android:contentDescription="@string/browse_file"
        android:src="@drawable/ic_take_img"
        app:layout_constraintTop_toBottomOf="@+id/browse_file_video"
        tools:layout_editor_absoluteX="206dp" />


    <Button
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:background="@drawable/upload_btn"
        android:text="@string/upload_button"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="206dp" />

    <VideoView
        android:id="@+id/firebaseVideo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="@dimen/margin_eight"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firebaseImg" />

    <EditText
        android:id="@+id/contentTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_eight"
        android:paddingStart="@dimen/margin_eight"
        android:hint="@string/content_title"
        android:inputType="text"
        android:visibility="gone"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebaseImg" />


</androidx.constraintlayout.widget.ConstraintLayout>