<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical"
    tools:context=".SignInActivity">


    <EditText
        android:id="@+id/signEmailText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_email"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:background="@drawable/edit_text_btn"
        android:ems="10"
        android:hint="@string/str_email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin_eight"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/signEmailText"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:background="@drawable/edit_text_btn"
        android:ems="10"
        android:hint="@string/str_password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/margin_eight"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/signInPassword"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:background="@drawable/sing_btn"
        android:ems="10"
        android:onClick="signIn"
        android:text="@string/sign_in_button"
        android:textColor="#DCD9D9"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:background="@drawable/sing_btn"
        android:ems="10"
        android:onClick="goSignUp"
        android:text="@string/sign_up_go_button"
        android:textColor="#DCD9D9"
        android:textSize="16sp" />

   <!-- <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" /> -->

</RelativeLayout>